# OceanDepth

./: .gitignore  CMakeLists.txt  PROGRESSION.md  README.md  changes.diff  creature_test  identifiants.txt
code/Include/core/: creatures.h  effects.h  helper.h
code/include/core/: player.h
code/includes/core/: action.h  combat_loop.h  creature.h  creature_data.h  effect.h  effect_list.h  entity.h  error_codes.h  game_init.h  inventory.h  inventory_data.h  item.h  item_data.h  item_pool.h  map.h  player.h  reward_system.h  save_system.h  shop.h  stats.h
code/includes/helper/: input_validator.h
code/includes/interface/: colors.h  interface_api.h  interface_cli.h  interface_table.h
code/src/: main.c
code/src/core/: action.c  combat_loop.c  creature.c  creature_data.c  creatures.c  effect.c  effect_list.c  effects.c  entity.c  game_init.c  helper.c  inventory.c  inventory_data.c  item.c  item_data.c  item_pool.c  map.c  player.c  reward_system.c  save_system.c  shop.c  stats.c
code/src/helper/: input_validator.c
code/src/interface/: interface_api.c  interface_cli.c  interface_table.c  interface_test.c
code/tests/: combat_loop_test.c  creature_data_test.c  creature_test.c  effect_test.c  map_test.c  player_test  player_test.c  rewards_test.c  save_system_test.c  shop_test.c
code/tests/interface/: interface_test.c  interface_test.h
creature_test.dSYM/Contents/: Info.plist
creature_test.dSYM/Contents/Resources/DWARF/: creature_test
creature_test.dSYM/Contents/Resources/Relocations/aarch64/: creature_test.yml
documentation/: Keypoints.md  api.md  guidelines.md  structs.md
player_test.dSYM/Contents/: Info.plist
player_test.dSYM/Contents/Resources/DWARF/: player_test
player_test.dSYM/Contents/Resources/Relocations/aarch64/: player_test.yml
tests/: CMakeLists.txt
